# pauljon

./: README.md  auto_document.py  auto_summary.py  document_from_discord_chats.py  document_summary-diataxis1.md  document_summary-fmc1.md  document_summary-fmc2.md  document_summary.md  document_summary1.md  document_summary10.md  document_summary11.md  document_summary12.md  document_summary13.md  document_summary2.md  document_summary3.md  document_summary4.md  document_summary5.md  document_summary6.md  document_summary7.md  document_summary8.md  document_summary9.md  freemocap_readthedocs_loader.py  pyproject.toml  summarize_playbook.py  web_research.ipynb  web_scraping.ipynb
scraped_docs_data/freemocap.readthedocs.io/en/latest/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/about_us/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/community/code_of_conduct/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/community/privacy_policy/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/contributing/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/contributing/bug_report/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/contributing/feature_request/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/contributing/python_code_style_guide/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/getting_started/: index.html
scraped_docs_data/freemocap.readthedocs.io/en/latest/getting_started/installation/: index.html
(+3 files in other folders)
