[tool.poetry]
name = "pauljon"
version = "0.1.0"
description = ""
authors = ["Jon Matthis <jonmatthis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.323"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
